oss: fix corrupt audio format (fixes #9760)