modules/audio_output/oss.c
@@ -208,6 +208,7 @@ static int Start (audio_output_t *aout, audio_sample_format_t *restrict fmt)
         fmt->i_original_channels =
         fmt->i_physical_channels = channels;
     }
+    aout_FormatPrepare (fmt);
 
     VolumeSync (aout);
     sys->starting = true;
